feat(orchestrator): re-planning with selective stage reuse; full unit test suite